--- a/app/src/main/res/layout/fragment_pokemon_list.xml
+++ b/app/src/main/res/layout/fragment_pokemon_list.xml
@@ -38,6 +38,7 @@
                     android:layout_margin="5dp"
                     android:background="@null"
                     android:drawableStart="@drawable/ic_baseline_search"
+                    android:focusableInTouchMode="true"
                     android:hint="@string/search_pokemons"
                     android:imeOptions="actionSearch"
                     android:singleLine="true"
@@ -52,19 +53,28 @@
 
         </androidx.appcompat.widget.Toolbar>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/pokemon_list"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clipToPadding="false"
-            android:paddingStart="@dimen/card_side_margin"
-            android:paddingTop="@dimen/card_side_margin"
-            android:paddingEnd="@dimen/card_side_margin"
-            android:paddingBottom="?actionBarSize"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            app:spanCount="2"
-            tools:listitem="@layout/list_item_pokemon" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/pokemon_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:paddingStart="@dimen/card_side_margin"
+                android:paddingTop="@dimen/card_side_margin"
+                android:paddingEnd="@dimen/card_side_margin"
+                android:paddingBottom="?actionBarSize"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                app:spanCount="2"
+                tools:listitem="@layout/list_item_pokemon" />
+
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <TextView
             android:id="@+id/text_error"
