--- a/app/src/main/res/layout/list_item_pokemon.xml
+++ b/app/src/main/res/layout/list_item_pokemon.xml
@@ -10,6 +10,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
+        android:id="@+id/card"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/card_side_margin"
         android:layout_marginEnd="@dimen/card_side_margin"
