Fix: changed the package name in navigation replacing domain with model

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,7 +27,7 @@
 
         <argument
             android:name="pokemon_result"
-            app:argType="dev.ronnie.pokeapiandroidtask.domain.PokemonResult"
+            app:argType="dev.ronnie.pokeapiandroidtask.model.PokemonResult"
             app:nullable="false" />
 
         <argument
