--- a/app/src/main/res/layout/fragment_pokemon_stats.xml
+++ b/app/src/main/res/layout/fragment_pokemon_stats.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -52,10 +51,10 @@
                         android:layout_height="@dimen/pokemon_image_height"
                         android:layout_marginTop="10dp"
                         android:scaleType="fitCenter"
-                        tools:src="@drawable/ic_pokeball"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:src="@drawable/ic_pokeball" />
 
                     <TextView
                         android:id="@+id/pokemon_item_height"
