Feat: Changed the loading strategy

--- a/app/src/main/res/layout/dialog_thank_you.xml
+++ b/app/src/main/res/layout/dialog_thank_you.xml
@@ -20,7 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="@string/disclaimer_header"
+                android:text="@string/thanks_header"
                 android:textColor="#3F536E"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,9 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/ic_warning"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:src="@drawable/ic_thank_you"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -57,7 +59,7 @@
                 android:id="@+id/text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/disclaimer"
+                android:text="@string/thanks"
                 android:textAlignment="center"
                 android:textColor="#3F536E"
                 android:textSize="13sp"
