--- a/app/src/main/res/layout/fragment_pokemon_stats.xml
+++ b/app/src/main/res/layout/fragment_pokemon_stats.xml
@@ -114,6 +114,15 @@
                     app:spanCount="2"
                     tools:listitem="@layout/stat_item_pokemon" />
 
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/progress_circular"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/card"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/stats" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
