--- a/app/src/main/res/layout/dialog_thank_you.xml
+++ b/app/src/main/res/layout/dialog_thank_you.xml
@@ -53,7 +53,8 @@
                 android:src="@drawable/ic_thank_you"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@null" />
 
             <TextView
                 android:id="@+id/text1"
