--- a/app/src/main/res/layout/list_item_pokemon.xml
+++ b/app/src/main/res/layout/list_item_pokemon.xml
@@ -27,7 +27,8 @@
                 android:scaleType="fitCenter"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@null" />
 
 
             <ProgressBar
