--- a/app/src/main/res/layout/dialog_thank_you.xml
+++ b/app/src/main/res/layout/dialog_thank_you.xml
@@ -50,16 +50,17 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
+                android:contentDescription="@null"
                 android:src="@drawable/ic_thank_you"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@null" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:text="@string/thanks"
                 android:textAlignment="center"
                 android:textColor="#3F536E"
