--- a/app/src/main/res/drawable/ic_pokeball.xml
+++ b/app/src/main/res/drawable/ic_pokeball.xml
@@ -1,15 +1,42 @@
-<vector android:height="75dp" android:viewportHeight="126.334"
-    android:viewportWidth="126.334" android:width="75dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF1A1A" android:pathData="M63.167,63.166m-61.667,0a61.667,61.667 0,1 1,123.334 0a61.667,61.667 0,1 1,-123.334 0"/>
-    <path android:fillColor="#D60909" android:pathData="M1.5,63.166a61.667,47.232 0,1 0,123.334 0a61.667,47.232 0,1 0,-123.334 0z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M1.5,63.166c0,34.061 27.609,61.668 61.667,61.668s61.667,-27.607 61.667,-61.668H1.5z"/>
-    <path android:fillColor="#D8E5EA" android:pathData="M63.167,110.398c34.058,0 61.667,-21.148 61.667,-47.232H1.5C1.5,89.25 29.109,110.398 63.167,110.398z"/>
-    <path android:fillColor="#33363A" android:pathData="M63.167,0C28.336,0 0,28.336 0,63.166c0,34.831 28.336,63.168 63.167,63.168s63.167,-28.337 63.167,-63.168C126.334,28.336 97.998,0 63.167,0zM63.167,3c32.673,0 59.328,26.183 60.129,58.666H3.038C3.839,29.183 30.494,3 63.167,3zM63.167,123.334c-32.673,0 -59.328,-26.184 -60.129,-58.668h120.258C122.495,97.15 95.84,123.334 63.167,123.334z"/>
-    <path android:fillColor="#A7BBC1" android:pathData="M63.167,68.868m-16.764,0a16.764,16.764 0,1 1,33.528 0a16.764,16.764 0,1 1,-33.528 0"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M63.167,63.167m-16.764,0a16.764,16.764 0,1 1,33.528 0a16.764,16.764 0,1 1,-33.528 0"/>
-    <path android:fillColor="#D8E5EA" android:pathData="M51.313,75.021c-6.547,-6.547 -6.546,-17.16 0,-23.709c6.547,-6.546 17.161,-6.546 23.707,0"/>
-    <path android:fillColor="#33363A" android:pathData="M63.167,81.432c-4.878,0 -9.465,-1.9 -12.915,-5.35c-7.12,-7.12 -7.12,-18.707 0,-25.83c7.122,-7.12 18.708,-7.12 25.829,0l0,0c3.45,3.451 5.351,8.038 5.351,12.916c0,4.878 -1.9,9.465 -5.351,12.915C72.632,79.532 68.046,81.432 63.167,81.432zM63.167,47.91c-3.909,0 -7.817,1.487 -10.793,4.463c-5.95,5.953 -5.95,15.637 0,21.588c2.883,2.883 6.716,4.471 10.793,4.471c4.077,0 7.91,-1.588 10.792,-4.471c2.883,-2.883 4.472,-6.716 4.472,-10.793c0,-4.077 -1.588,-7.91 -4.472,-10.794C70.985,49.398 67.076,47.91 63.167,47.91z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M68.871,68.87c-3.149,3.146 -8.257,3.146 -11.404,0c-3.149,-3.15 -3.148,-8.255 0,-11.403c3.148,-3.15 8.255,-3.148 11.403,0C72.019,60.615 72.019,65.72 68.871,68.87z"/>
-    <path android:fillColor="#D8E5EA" android:pathData="M57.467,57.467c3.148,-3.15 8.255,-3.148 11.403,0c3.148,3.148 3.148,8.253 0.001,11.403"/>
-    <path android:fillColor="#33363A" android:pathData="M63.168,72.725c-2.45,0 -4.898,-0.931 -6.762,-2.794c-3.729,-3.73 -3.729,-9.797 0,-13.525c1.805,-1.807 4.207,-2.802 6.761,-2.802c0,0 0,0 0,0c2.555,0 4.957,0.996 6.763,2.802c3.728,3.727 3.728,9.794 0.001,13.524c0,0 0,0.001 -0.001,0.001C68.066,71.794 65.617,72.725 63.168,72.725zM63.167,56.604c-1.753,0 -3.401,0.683 -4.64,1.923c-2.559,2.559 -2.559,6.723 0,9.282c2.558,2.557 6.723,2.557 9.283,0c2.558,-2.56 2.557,-6.724 -0.001,-9.282C66.57,57.288 64.921,56.605 63.167,56.604L63.167,56.604z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="75dp"
+    android:height="75dp"
+    android:viewportWidth="126.334"
+    android:viewportHeight="126.334">
+    <path
+        android:fillColor="#FF1A1A"
+        android:pathData="M63.167,63.166m-61.667,0a61.667,61.667 0,1 1,123.334 0a61.667,61.667 0,1 1,-123.334 0" />
+    <path
+        android:fillColor="#D60909"
+        android:pathData="M1.5,63.166a61.667,47.232 0,1 0,123.334 0a61.667,47.232 0,1 0,-123.334 0z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M1.5,63.166c0,34.061 27.609,61.668 61.667,61.668s61.667,-27.607 61.667,-61.668H1.5z" />
+    <path
+        android:fillColor="#D8E5EA"
+        android:pathData="M63.167,110.398c34.058,0 61.667,-21.148 61.667,-47.232H1.5C1.5,89.25 29.109,110.398 63.167,110.398z" />
+    <path
+        android:fillColor="#33363A"
+        android:pathData="M63.167,0C28.336,0 0,28.336 0,63.166c0,34.831 28.336,63.168 63.167,63.168s63.167,-28.337 63.167,-63.168C126.334,28.336 97.998,0 63.167,0zM63.167,3c32.673,0 59.328,26.183 60.129,58.666H3.038C3.839,29.183 30.494,3 63.167,3zM63.167,123.334c-32.673,0 -59.328,-26.184 -60.129,-58.668h120.258C122.495,97.15 95.84,123.334 63.167,123.334z" />
+    <path
+        android:fillColor="#A7BBC1"
+        android:pathData="M63.167,68.868m-16.764,0a16.764,16.764 0,1 1,33.528 0a16.764,16.764 0,1 1,-33.528 0" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M63.167,63.167m-16.764,0a16.764,16.764 0,1 1,33.528 0a16.764,16.764 0,1 1,-33.528 0" />
+    <path
+        android:fillColor="#D8E5EA"
+        android:pathData="M51.313,75.021c-6.547,-6.547 -6.546,-17.16 0,-23.709c6.547,-6.546 17.161,-6.546 23.707,0" />
+    <path
+        android:fillColor="#33363A"
+        android:pathData="M63.167,81.432c-4.878,0 -9.465,-1.9 -12.915,-5.35c-7.12,-7.12 -7.12,-18.707 0,-25.83c7.122,-7.12 18.708,-7.12 25.829,0l0,0c3.45,3.451 5.351,8.038 5.351,12.916c0,4.878 -1.9,9.465 -5.351,12.915C72.632,79.532 68.046,81.432 63.167,81.432zM63.167,47.91c-3.909,0 -7.817,1.487 -10.793,4.463c-5.95,5.953 -5.95,15.637 0,21.588c2.883,2.883 6.716,4.471 10.793,4.471c4.077,0 7.91,-1.588 10.792,-4.471c2.883,-2.883 4.472,-6.716 4.472,-10.793c0,-4.077 -1.588,-7.91 -4.472,-10.794C70.985,49.398 67.076,47.91 63.167,47.91z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M68.871,68.87c-3.149,3.146 -8.257,3.146 -11.404,0c-3.149,-3.15 -3.148,-8.255 0,-11.403c3.148,-3.15 8.255,-3.148 11.403,0C72.019,60.615 72.019,65.72 68.871,68.87z" />
+    <path
+        android:fillColor="#D8E5EA"
+        android:pathData="M57.467,57.467c3.148,-3.15 8.255,-3.148 11.403,0c3.148,3.148 3.148,8.253 0.001,11.403" />
+    <path
+        android:fillColor="#33363A"
+        android:pathData="M63.168,72.725c-2.45,0 -4.898,-0.931 -6.762,-2.794c-3.729,-3.73 -3.729,-9.797 0,-13.525c1.805,-1.807 4.207,-2.802 6.761,-2.802c0,0 0,0 0,0c2.555,0 4.957,0.996 6.763,2.802c3.728,3.727 3.728,9.794 0.001,13.524c0,0 0,0.001 -0.001,0.001C68.066,71.794 65.617,72.725 63.168,72.725zM63.167,56.604c-1.753,0 -3.401,0.683 -4.64,1.923c-2.559,2.559 -2.559,6.723 0,9.282c2.558,2.557 6.723,2.557 9.283,0c2.558,-2.56 2.557,-6.724 -0.001,-9.282C66.57,57.288 64.921,56.605 63.167,56.604L63.167,56.604z" />
 </vector>
