--- a/app/src/main/res/drawable/ic_up.xml
+++ b/app/src/main/res/drawable/ic_up.xml
@@ -1,5 +1,10 @@
-<vector android:height="20dp" android:tint="#FFFFFF"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M7,14l5,-5 5,5z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="20dp"
+    android:height="20dp"
+    android:tint="#FFFFFF"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M7,14l5,-5 5,5z" />
 </vector>
